--- a/pom.xml
+++ b/pom.xml
@@ -67,13 +67,13 @@
         </plugins>
     </build>
 
-<!--    <distributionManagement>-->
-<!--        <repository>-->
-<!--            <id>github</id>-->
-<!--            <name>GitHub OWNER Apache Maven Packages</name>-->
-<!--            <url>https://maven.pkg.github.com/emeraldjava/structurizr-maven-plugin</url>-->
-<!--        </repository>-->
-<!--    </distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/emeraldjava/structurizr-maven-plugin</url>
+        </repository>
+    </distributionManagement>
 
 
 </project>
